added a-b button and changed color

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
         <div class="d-flex justify-content-center text-center">
             <button class="bOut" onclick="addition()">A + B</button>
+            <button class="bOut" onclick="subtraction()">A - B</button>
             <button class="bOut" onclick="multiplication()">A * B</button>
         </div>
 
@@ -129,6 +130,8 @@
 
             </div>
         </div>
+
+        <hr>
 
         <div id="resultsection" class="d-flex justify-content-center text-center">
             <div class="section">
