--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
                 <button class="bIn" onclick="clearTable('atable')">All 0</button>
                 <button class="bIn" onclick="fillRandom('atable')">Random</button>
+                <button class="bIn" onclick="showDeterminant('atable')">Determinant</button>
 
             </div>
         </div>
@@ -78,6 +79,7 @@
             <button class="bOut" onclick="addition()">A + B</button>
             <button class="bOut" onclick="subtraction()">A - B</button>
             <button class="bOut" onclick="multiplication()">A * B</button>
+            <button class="bOut" onclick="division()">A / B</button>
         </div>
 
         <div class="d-flex justify-content-center text-center">
@@ -127,6 +129,7 @@
 
                 <button class="bIn" onclick="clearTable('btable')">All 0</button>
                 <button class="bIn" onclick="fillRandom('btable')">Random</button>
+                <button class="bIn" onclick="showDeterminant('btable')">Determinant</button>
 
             </div>
         </div>
