added inverse button

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <button class="bIn" onclick="clearTable('atable')">All 0</button>
                 <button class="bIn" onclick="fillRandom('atable')">Random</button>
                 <button class="bIn" onclick="showDeterminant('atable')">Determinant</button>
+                <button class="bIn" onclick="showInverse('atable')">Inverse</button>
 
             </div>
         </div>
@@ -130,6 +131,7 @@
                 <button class="bIn" onclick="clearTable('btable')">All 0</button>
                 <button class="bIn" onclick="fillRandom('btable')">Random</button>
                 <button class="bIn" onclick="showDeterminant('btable')">Determinant</button>
+                <button class="bIn" onclick="showInverse('btable')">Inverse</button>
 
             </div>
         </div>
