--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="d-flex justify-content-center text-center">
             <button class="bOut" onclick="addition()">A + B</button>
             <button class="bOut" onclick="subtraction()">A - B</button>
-            <button class="bOut" onclick="multiplication()">A * B</button>
+            <button class="bOut" onclick="multiplication()">A × B</button>
             <button class="bOut" onclick="division()">A / B</button>
         </div>
 
